feat: just an absolute boatload of new stuff